examples/test/testpolicy10923.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10923
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key13: value18
      key39: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value47
          key27: value42
          key6: value7
      podSelector:
        matchLabels:
          key46: value49
          key28: value49
          key15: value20
